--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
 {
 	"name": "@cretia/components",
+	"version": "0.0.2-alpha.2",
+	"files": [
+		"dist",
+		"README.md"
+	],
+	"keywords": [
+		"cretia",
+		"components",
+		"design-system"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/cretia-app/components"
+	},
 	"main": "dist/cjs/index.js",
 	"module": "dist/esm/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
+		"lint": "eslint --ext .js,.jsx,.ts,.tsx src",
 		"build": "rollup -c --bundleConfigAsCjs",
 		"typecheck": "tsc --noEmit",
 		"clean": "rimraf dist node_modules",
@@ -11,27 +26,35 @@
 		"format-check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,md}\""
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^25.0.3",
-		"@rollup/plugin-json": "^6.0.0",
-		"@rollup/plugin-node-resolve": "^15.1.0",
-		"@rollup/plugin-typescript": "^11.1.2",
-		"@types/cleave.js": "^1.4.7",
-		"@types/react": "~18.2.18",
-		"@types/react-color": "^3.0.6",
+		"@rollup/plugin-commonjs": "25.0.3",
+		"@rollup/plugin-json": "6.0.0",
+		"@rollup/plugin-node-resolve": "15.1.0",
+		"@rollup/plugin-typescript": "11.1.2",
+		"@storybook/builder-vite": "^7.3.1",
+		"@types/cleave.js": "1.4.7",
+		"@types/react": "18.2.18",
+		"@types/react-color": "3.0.6",
+		"eslint": "8.47.0",
+		"eslint-config-cretia": "0.4.13",
+		"prettier": "3.0.2",
+		"prettier-config-cretia": "2.0.0",
 		"react": "18.2.0",
-		"rollup": "^3.27.2",
-		"rollup-plugin-dts": "^5.3.1",
-		"rollup-plugin-peer-deps-external": "^2.2.4",
-		"rollup-plugin-terser": "^7.0.2",
-		"tslib": "^2.6.1",
-		"vitest": "~0.34.1"
+		"rimraf": "5.0.1",
+		"rollup": "3.27.2",
+		"rollup-plugin-dts": "5.3.1",
+		"rollup-plugin-peer-deps-external": "2.2.4",
+		"rollup-plugin-terser": "7.0.2",
+		"tslib": "2.6.1",
+		"typescript": "5.1.6",
+		"vite": "^4.4.9",
+		"vitest": "0.34.1"
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "2.0.5",
 		"@radix-ui/react-select": "1.2.2",
 		"@radix-ui/react-tooltip": "1.0.6",
 		"@tabler/icons-react": "2.30.0",
-		"@types/styled-system": "~5.1.16",
+		"@types/styled-system": "5.1.16",
 		"cleave.js": "1.6.0",
 		"react-color": "2.19.3",
 		"react-markdown": "8.0.7",
