--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 			"@/*": ["src/*"]
 		}
 	},
-	"include": ["src/**/*", "rollup.config.ts"],
+	"include": ["src/**/*", "rollup.config.js"],
 	"exclude": [
 		"dist",
 		"node_modules",
