--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "@cretia/components",
-	"version": "0.0.2-alpha.2",
+	"version": "0.0.2-alpha.4",
 	"files": [
 		"dist",
+		"styles",
 		"README.md"
 	],
 	"keywords": [
@@ -23,30 +24,50 @@
 		"typecheck": "tsc --noEmit",
 		"clean": "rimraf dist node_modules",
 		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
-		"format-check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,md}\""
+		"format-check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"tscheck": "tsc --noEmit --pretty",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "25.0.3",
 		"@rollup/plugin-json": "6.0.0",
 		"@rollup/plugin-node-resolve": "15.1.0",
 		"@rollup/plugin-typescript": "11.1.2",
+		"@storybook/addon-essentials": "^7.3.1",
+		"@storybook/addon-interactions": "^7.3.1",
+		"@storybook/addon-links": "^7.3.1",
+		"@storybook/addon-onboarding": "^1.0.8",
+		"@storybook/blocks": "^7.3.1",
 		"@storybook/builder-vite": "^7.3.1",
+		"@storybook/react": "^7.3.1",
+		"@storybook/react-vite": "^7.3.1",
+		"@storybook/testing-library": "^0.2.0",
+		"@testing-library/react": "^14.0.0",
+		"@testing-library/user-event": "^14.4.3",
 		"@types/cleave.js": "1.4.7",
 		"@types/react": "18.2.18",
 		"@types/react-color": "3.0.6",
 		"eslint": "8.47.0",
 		"eslint-config-cretia": "0.4.13",
+		"eslint-plugin-storybook": "^0.6.13",
+		"happy-dom": "^10.10.2",
 		"prettier": "3.0.2",
 		"prettier-config-cretia": "2.0.0",
 		"react": "18.2.0",
+		"react-dom": "^18.2.0",
 		"rimraf": "5.0.1",
 		"rollup": "3.27.2",
+		"rollup-plugin-copy": "^3.4.0",
 		"rollup-plugin-dts": "5.3.1",
 		"rollup-plugin-peer-deps-external": "2.2.4",
 		"rollup-plugin-terser": "7.0.2",
+		"storybook": "^7.3.1",
 		"tslib": "2.6.1",
 		"typescript": "5.1.6",
 		"vite": "^4.4.9",
+		"vite-tsconfig-paths": "^4.2.0",
 		"vitest": "0.34.1"
 	},
 	"dependencies": {
@@ -62,5 +83,10 @@
 		"react-textarea-autosize": "8.5.2",
 		"styled-components": "6.0.7",
 		"styled-system": "5.1.5"
+	},
+	"eslintConfig": {
+		"extends": [
+			"plugin:storybook/recommended"
+		]
 	}
 }
