--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,5 @@
 		}
 	},
 	"include": ["src/**/*", "rollup.config.js"],
-	"exclude": [
-		"dist",
-		"node_modules",
-		"src/**/*.test.tsx",
-		"src/**/*.stories.tsx"
-	]
+	"exclude": ["dist", "node_modules", "src/**/*.stories.tsx"]
 }
