--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@cretia/components",
 	"description": "Cretia components library",
-	"version": "0.0.2-alpha.25",
+	"version": "0.0.2-alpha.26",
 	"files": [
 		"dist",
 		"styles",
@@ -34,19 +34,19 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "~25.0.4",
-		"@rollup/plugin-json": "~6.0.0",
-		"@rollup/plugin-node-resolve": "~15.2.1",
-		"@rollup/plugin-typescript": "~11.1.4",
-		"@storybook/addon-essentials": "~7.4.5",
-		"@storybook/addon-interactions": "~7.4.5",
-		"@storybook/addon-links": "~7.4.5",
+		"@rollup/plugin-commonjs": "~25.0.7",
+		"@rollup/plugin-json": "~6.0.1",
+		"@rollup/plugin-node-resolve": "~15.2.3",
+		"@rollup/plugin-typescript": "~11.1.5",
+		"@storybook/addon-essentials": "~7.5.3",
+		"@storybook/addon-interactions": "~7.5.3",
+		"@storybook/addon-links": "~7.5.3",
 		"@storybook/addon-onboarding": "~1.0.8",
-		"@storybook/blocks": "~7.4.5",
-		"@storybook/builder-vite": "~7.4.5",
-		"@storybook/manager-api": "~7.4.5",
-		"@storybook/react": "~7.4.5",
-		"@storybook/react-vite": "~7.4.5",
+		"@storybook/blocks": "~7.5.3",
+		"@storybook/builder-vite": "~7.5.3",
+		"@storybook/manager-api": "~7.5.3",
+		"@storybook/react": "~7.5.3",
+		"@storybook/react-vite": "~7.5.3",
 		"@storybook/testing-library": "~0.2.2",
 		"@storybook/theming": "~7.4.5",
 		"@testing-library/react": "~14.0.0",
@@ -78,13 +78,13 @@
 		"@radix-ui/react-dropdown-menu": "2.x",
 		"@radix-ui/react-select": "1.x",
 		"@radix-ui/react-tooltip": "1.x",
-		"@tabler/icons-react": "2.x",
-		"@types/styled-system": "5.x",
+		"@tabler/icons-react": "~2.40.0",
+		"@types/styled-system": "~5.1.22",
 		"cleave.js": "1.x",
 		"react-color": "2.x",
 		"react-markdown": "8.x",
 		"react-textarea-autosize": "8.x",
-		"styled-components": "6.x",
+		"styled-components": "~6.1.1",
 		"styled-system": "5.x"
 	}
 }
