--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"typecheck": "tsc --noEmit --pretty",
 		"clean": "rimraf dist node_modules",
 		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
-		"format-check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
+		"format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
 		"test": "vitest"
