--- a/package.json
+++ b/package.json
@@ -1,27 +1,15 @@
 {
 	"name": "@cretia/components",
 	"description": "Cretia components library",
-	"version": "0.0.3-alpha.0",
-	"files": [
-		"dist",
-		"styles",
-		"README.md"
-	],
+	"version": "0.0.3-alpha.8",
+	"type": "module",
 	"license": "MIT",
-	"bugs": "https://github.com/cretia-app/components/issues",
-	"homepage": "https://components.cretia.app",
-	"keywords": [
-		"cretia",
-		"components",
-		"design-system"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/cretia-app/components"
+	"engines": {
+		"node": "^18 || ^20",
+		"pnpm": "8",
+		"yarn": "0",
+		"bun": "0"
 	},
-	"main": "dist/cjs/index.js",
-	"module": "dist/esm/index.js",
-	"types": "dist/index.d.ts",
 	"scripts": {
 		"lint": "eslint --ext .js,.jsx,.ts,.tsx src",
 		"build": "rollup -c --bundleConfigAsCjs",
@@ -34,57 +22,84 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "~25.0.7",
-		"@rollup/plugin-json": "~6.0.1",
-		"@rollup/plugin-node-resolve": "~15.2.3",
 		"@rollup/plugin-typescript": "~11.1.5",
-		"@storybook/addon-essentials": "~7.5.3",
-		"@storybook/addon-interactions": "~7.5.3",
-		"@storybook/addon-links": "~7.5.3",
+		"@storybook/addon-essentials": "~7.6.0",
+		"@storybook/addon-interactions": "~7.6.0",
+		"@storybook/addon-links": "~7.6.0",
 		"@storybook/addon-onboarding": "~1.0.8",
-		"@storybook/blocks": "~7.5.3",
-		"@storybook/builder-vite": "~7.5.3",
-		"@storybook/manager-api": "~7.5.3",
-		"@storybook/react": "~7.5.3",
-		"@storybook/react-vite": "~7.5.3",
+		"@storybook/blocks": "~7.6.0",
+		"@storybook/builder-vite": "~7.6.0",
+		"@storybook/manager-api": "~7.6.0",
+		"@storybook/react": "~7.6.0",
+		"@storybook/react-vite": "~7.6.0",
 		"@storybook/testing-library": "~0.2.2",
-		"@storybook/theming": "~7.4.5",
-		"@testing-library/react": "~14.0.0",
+		"@storybook/theming": "~7.6.0",
+		"@testing-library/react": "~14.1.2",
 		"@testing-library/user-event": "~14.5.1",
-		"@types/cleave.js": "~1.4.8",
-		"@types/react": "~18.2.24",
-		"@types/react-color": "~3.0.7",
-		"eslint": "~8.50.0",
+		"@types/cleave.js": "~1.4.12",
+		"@types/react": "~18.2.39",
+		"eslint": "~8.54.0",
 		"eslint-config-cretia": "~0.4.14",
-		"happy-dom": "~12.5.0",
-		"prettier": "~3.0.3",
-		"prettier-config-cretia": "~2.0.0",
+		"happy-dom": "~12.10.3",
+		"prettier": "~3.1.0",
+		"prettier-config-cretia": "~3.0.0",
 		"react": "18.x",
 		"react-dom": "18.x",
 		"rimraf": "~5.0.5",
-		"rollup": "~3.29.4",
+		"rollup": "~4.6.0",
 		"rollup-plugin-copy": "~3.5.0",
-		"rollup-plugin-dts": "~6.0.2",
-		"rollup-plugin-peer-deps-external": "~2.2.4",
-		"rollup-plugin-terser": "~7.0.2",
-		"storybook": "~7.3.1",
-		"tslib": "~2.6.1",
-		"typescript": "~5.1.6",
-		"vite": "~4.4.9",
-		"vite-tsconfig-paths": "~4.2.0",
-		"vitest": "~0.34.1"
+		"rollup-plugin-esbuild": "~6.1.0",
+		"rollup-plugin-replace": "~2.2.0",
+		"storybook": "~7.6.0",
+		"tslib": "~2.6.2",
+		"typescript": "~5.3.2",
+		"vite": "~5.0.3",
+		"vite-tsconfig-paths": "~4.2.1",
+		"vitest": "~0.34.6"
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "2.x",
 		"@radix-ui/react-select": "1.x",
 		"@radix-ui/react-tooltip": "1.x",
-		"@tabler/icons-react": "~2.40.0",
+		"@tabler/icons-react": "~2.42.0",
 		"@types/styled-system": "~5.1.22",
 		"cleave.js": "1.x",
-		"react-color": "2.x",
 		"react-markdown": "8.x",
 		"react-textarea-autosize": "8.x",
 		"styled-components": "~6.1.1",
 		"styled-system": "5.x"
-	}
+	},
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"packageManager": "pnpm@8.10.5",
+	"bugs": "https://github.com/cretia-app/components/issues",
+	"homepage": "https://components.cretia.app",
+	"files": [
+		"dist",
+		"styles",
+		"README.md"
+	],
+	"exports": {
+		".": {
+			"import": "./dist/index.js",
+			"require": "./dist/index.cjs",
+			"default": "./dist/index.cjs"
+		},
+		"./package.json": "./package.json",
+		"./styles/global.css": {
+			"import": "./styles/global.css",
+			"require": "./styles/global.css",
+			"default": "./styles/global.css"
+		}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/cretia-app/components"
+	},
+	"keywords": [
+		"cretia",
+		"components",
+		"design-system"
+	]
 }
