--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,24 @@
 {
 	"compilerOptions": {
-		"esModuleInterop": true,
-		"strict": true,
-		"noImplicitAny": true,
-		"skipLibCheck": true,
-		"jsx": "react-jsx",
-		"module": "ESNext",
+		"allowJs": true,
+		"alwaysStrict": true,
 		"declaration": true,
 		"declarationDir": "types",
-		"sourceMap": true,
-		"outDir": "dist",
-		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true,
+		"declarationMap": true,
+		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["src/*"]
-		}
+		"importHelpers": true,
+		"jsx": "react-jsx",
+		"lib": ["DOM"],
+		"module": "ES2020",
+		"moduleResolution": "Bundler",
+		"noImplicitAny": true,
+		"outDir": "dist",
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true,
+		"target": "ES2018"
 	},
-	"include": ["src/**/*", "rollup.config.js"],
-	"exclude": ["dist", "node_modules", "src/**/*.stories.tsx"]
+	"exclude": ["dist", "node_modules", "src/**/*.stories.tsx"],
+	"include": ["src/**/*", "rollup.config.js"]
 }
